style.Css
@import url("https://fonts.googleapis.com/css2?family=Monsieur+La+Doulaise&family=Moon+Dance&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
*,
*:before,
*:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  padding: 0;
  margin: 0;
  outline: 1px solid red;
}
section {
  width: 80%;
  max-width: 1600px;
  margin: 0 auto;
}
a {
  text-decoration: none;
}
a:visited {
  color: #ffffff;
}
li {
  list-style: none;
}
.quote-box {
  border-radius: 100px;
  border: 1px solid white;
  text-transform: uppercase;
  white-space: nowrap;
}
.elegance {
  max-width: 236px;
  height: 48px;
}
/*HEADER*/
header {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  align-items: center;
  background-color: #073b43;
  height: 84px;
}
.responsivity {
  display: none;
}

nav ul {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  gap: 40px;
}
.nav-in ul li a {
  position: relative;
  padding: 0 10px;
}
.nav-in ul li a::after {
  content: "";
  position: absolute;
  background-color: #ffffff;
  height: 2px;
  width: 0;
  left: 0;
  top: 20px;
  transition: 0.3s;
}
.nav-in ul li a:hover:after {
  width: 100%;
}
.nav-out {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 24px;
}

.header-icon {
  width: 24px;
  height: 24px;
}
.search img {
  margin-top: 8px;
}
.header-box {
  text-align: center;
  max-width: 156px;
  max-height: 40px;
  padding: 10px 28px 10px 28px;
  transition: 0.3s ease;
}
.header-box:hover {
  background-color: #ffffff;
  color: #073b43;
}
/*FIRST SECTION*/
.first-section {
  position: relative;
  height: 80vh;
}
.first-section img {
  position: absolute;
  object-fit: cover;
  width: 100%;
  height: 100%;
  z-index: -1;
  background-color: #00000033;
  filter: brightness(80%);
}
.home-text {
  position: relative;
  top: 175px;
  right: 32px;
  gap: 16px;
  z-index: 3;
}
.home-text {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  gap: 32px;
  color: rgba(255, 255, 255, 1);
}
.home-text h1 {
  font-size: 5.75rem;
  line-height: 5.75rem;
  font-weight: 500;
  text-align: center;
}
.home-text p {
  font-size: 1.75rem;
  line-height: 2.5rem;
  font-weight: 300;
  text-align: center;
}
.home-text a {
  padding-top: 16px;
}
.home-box {
  align-self: center;
  width: 250px;
  max-width: 250px;
  height: 56px;
  text-align: center;
  transition: 0.3s;
}
.home-box:hover {
  background-color: #073b43;
  border: #073b43;
  margin: 0;
}
/*SECOND SECTION*/
.second-section {
  height: 15vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background-color: #ded1b3;
}
.second-section ul {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}
.second-section ul li {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  gap: 16px;
}
.second-section ul li img {
  width: 40px;
  height: 40px;
}
.second-section ul li h3 {
  font-size: 1.375rem;
  font-weight: 500;
  line-height: 1rem;
  color: #073b43;
  text-align: start;
}
/*THIRD SECTION*/
.third-section {
  height: 78.5vh;
  display: flex;
  flex-direction: row;
}
.image-Div {
  width: 50%;
}
.image-Div img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center right;
}
.third-section-text {
  width: 60%;
  background-color: #073b43;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  gap: 44px;
  color: #ffffff;
  padding: 120px;
}
.third-section-text h1 {
  align-self: flex-start;
  font-size: 3.75rem;
  font-weight: 500;
  line-height: 4.5rem;
  margin-left: 10px;
}
.third-section-text .elegance {
  align-self: flex-end;
}
.third-section-text p {
  font-size: 1.375rem;
  font-weight: 300;
  line-height: 32px;
}
/*FOURTH SECTION*/
.fourth-section {
  height: 60vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 48px;
  background-color: #ded1b3;
  padding-top: 50px;
}
.fourth-section h1 {
  position: relative;
  font-size: 3.25rem;
  font-weight: 500;
  line-height: 3.125;
  color: #073b43;
  animation: none;
  z-index: 1;
}
.Naptec-brands {
  position: relative;
  width: 90%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-left: 2%;
  padding-bottom: 50px;
  gap: 100px;
}
.brand {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  max-width: 252px;
  max-height: 252px;
  border-radius: 170px;
}
.brand img {
  object-fit: contain;
  transition: 0.4s;
}

.brand-text {
  visibility: hidden;
  opacity: 0;
  transition: opacity 0.5s ease-out, transform 0.5s ease-out;
  transform: translateY(-40px);
}
.brand-text p {
  line-height: 1.75;
}
.brand-text a {
  color: #073b43;
  text-decoration: underline;
}
.brand:hover img {
  transform: scale(0.6) translateY(-80px);
}
.brand:hover .brand-text {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  gap: 18px;
  text-align: center;
  color: #10292d;
  text-align: center;
  font-size: 1.125rem;
  font-weight: 300;
  visibility: visible;
  opacity: 1;
  transform: translateY(-60px);
}
@keyframes fadeIn {
  from {
    transform: translateY(-40px);
    opacity: 0;
  }
  to {
    transform: translateY(-60px);
    opacity: 1;
  }
}

/*FIFTH SECTION*/
.fifth-section {
  height: 90vh;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  background-color: #073b43;
  padding: 40px;
}
.section-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding-left: 35px;
  padding-right: 65px;
}
.section-header-title h1 {
  font-size: 3.75rem;
  font-weight: 500;
  line-height: 4.5rem;
  color: #ffffff;
}
/* ... */

